test(LadderGame) : 게임 완료 후 플레이어들이 보상 잘 찾아갔는지 확인 테스트